data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1655.wast
;; 6. **Test Description**: Encapsulate an `if` within a loop and place a `br_if` targeting the loop within the `if`'s false path. Ensure that a false `br_if` results in a no-op and the control flow continues correctly within the `if`.    - **Constraint Checked**: Accurate label targeting and stack state for no-op scenario in nested conditions.    - **Relation to Mismanagement of Block Nesting**: Incorrect handling might cause an unintended exit from the `if` or loop.

(assert_invalid
  (module
    (func $nested-loop-if-br_if
      (block
        (loop
          (if (i32.const 0)
            (then nop)
            (else (br_if 1 (i32.const 0))))))))
  "unknown label"
)